Added publishing and Jenkinsfile.

--- a/flatifier-maven-plugin/pom.xml
+++ b/flatifier-maven-plugin/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>eu.smesec.platform</groupId>
     <artifactId>flatifier-maven-plugin</artifactId>
-    <version>0.3.0</version>
+    <version>0.3.1</version>
 
     <name>Flatifier maven plugin</name>
     <description>Flatifier plugin to generate single file coaches during the build process.</description>
@@ -46,6 +46,12 @@
         <developer>
             <name>Martin Gwerder</name>
             <email>martin.gwerder@fhnw.ch</email>
+            <organization>University of Applied Sciences Northwestern Switzerland (FHNW)</organization>
+            <organizationUrl>https://www.fhnw.ch</organizationUrl>
+        </developer>
+        <developer>
+            <name>Mathias Luppi</name>
+            <email>mathias.luppi@fhnw.ch</email>
             <organization>University of Applied Sciences Northwestern Switzerland (FHNW)</organization>
             <organizationUrl>https://www.fhnw.ch</organizationUrl>
         </developer>
