--- a/flatifier-maven-plugin/pom.xml
+++ b/flatifier-maven-plugin/pom.xml
@@ -8,10 +8,9 @@
   <artifactId>flatifier-maven-plugin</artifactId>
   <version>0.3.2-SNAPSHOT</version>
 
-  <name>Flatifier maven plugin</name>
-  <description>Flatifier plugin to generate single file coaches during the build process.
-  </description>
-  <url>http://cysec.cyberlab.fhnw.ch/</url>
+  <name>CYSEC Flatifier Maven Plugin</name>
+  <description>Plugin to generate single file coaches and to help develop multilingual coaches.</description>
+  <url>https://cysec.cyberlab.fhnw.ch/</url>
 
   <packaging>maven-plugin</packaging>
 
@@ -51,8 +50,8 @@
       <organizationUrl>https://www.fhnw.ch</organizationUrl>
     </developer>
     <developer>
-      <name>Mathias Luppi</name>
-      <email>mathias.luppi@fhnw.ch</email>
+      <name>Matthias Luppi</name>
+      <email>matthias.luppi@students.fhnw.ch</email>
       <organization>University of Applied Sciences Northwestern Switzerland (FHNW)</organization>
       <organizationUrl>https://www.fhnw.ch</organizationUrl>
     </developer>
@@ -60,9 +59,8 @@
 
   <scm>
     <connection>scm:git:git://github.com/cysec-platform/cysec-flatifier.git</connection>
-    <developerConnection>scm:git:ssh://github.com/cysec-platform/cysec-flatifier
-    </developerConnection>
-    <url>https://github.com/cysec-platform/lib_coach_standard_language/tree/master</url>
+    <developerConnection>scm:git:ssh://github.com/cysec-platform/cysec-flatifier</developerConnection>
+    <url>https://github.com/cysec-platform/cysec-flatifier</url>
   </scm>
 
   <dependencies>
