--- a/flatifier/pom.xml
+++ b/flatifier/pom.xml
@@ -10,9 +10,9 @@
 
     <packaging>jar</packaging>
 
-    <name>Flatifier</name>
-    <description>Flatifier plugin to generate single file coaches during the build process.</description>
-    <url>http://cysec.cyberlab.fhnw.ch/</url>
+    <name>CYSEC Flatifier</name>
+    <description>Tool to generate single-file coaches during the build process.</description>
+    <url>https://cysec.cyberlab.fhnw.ch/</url>
 
     <properties>
         <java-version>8</java-version>
@@ -49,12 +49,18 @@
             <organization>University of Applied Sciences Northwestern Switzerland (FHNW)</organization>
             <organizationUrl>https://www.fhnw.ch</organizationUrl>
         </developer>
+        <developer>
+            <name>Matthias Luppi</name>
+            <email>matthias.luppi@students.fhnw.ch</email>
+            <organization>University of Applied Sciences Northwestern Switzerland (FHNW)</organization>
+            <organizationUrl>https://www.fhnw.ch</organizationUrl>
+        </developer>
     </developers>
 
     <scm>
         <connection>scm:git:git://github.com/cysec-platform/cysec-flatifier.git</connection>
         <developerConnection>scm:git:ssh://github.com/cysec-platform/cysec-flatifier</developerConnection>
-        <url>https://github.com/cysec-platform/lib_coach_standard_language/tree/master</url>
+        <url>https://github.com/cysec-platform/cysec-flatifier</url>
     </scm>
 
     <dependencies>
