--- a/flatifier/pom.xml
+++ b/flatifier/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>eu.smesec.platform</groupId>
     <artifactId>flatifier</artifactId>
-    <version>0.3.0</version>
+    <version>0.4.0-SNAPSHOT</version>
 
     <packaging>jar</packaging>
 
