--- a/flatifier-maven-plugin/pom.xml
+++ b/flatifier-maven-plugin/pom.xml
@@ -67,7 +67,7 @@
     <dependency>
       <groupId>eu.smesec.platform</groupId>
       <artifactId>flatifier</artifactId>
-      <version>0.3.0</version>
+      <version>0.4.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
