--- a/flatifier-maven-plugin/pom.xml
+++ b/flatifier-maven-plugin/pom.xml
@@ -70,6 +70,11 @@
       <version>0.4.0-SNAPSHOT</version>
     </dependency>
     <dependency>
+      <groupId>eu.smesec.platform</groupId>
+      <artifactId>flatifier-translation-tool</artifactId>
+      <version>0.1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
       <version>1.7.32</version>
