--- a/flatifier/pom.xml
+++ b/flatifier/pom.xml
@@ -25,7 +25,7 @@
 
     <groupId>eu.smesec.cysec</groupId>
     <artifactId>flatifier</artifactId>
-    <version>0.4.0-SNAPSHOT</version>
+    <version>0.4.0</version>
 
     <packaging>jar</packaging>
 
@@ -90,7 +90,7 @@
         <dependency>
             <groupId>eu.smesec.cysec</groupId>
             <artifactId>lib-flatifier</artifactId>
-            <version>0.4.0-SNAPSHOT</version>
+            <version>0.4.0</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
