--- a/lib-flatifier/pom.xml
+++ b/lib-flatifier/pom.xml
@@ -25,7 +25,7 @@
 
     <groupId>eu.smesec.cysec</groupId>
     <artifactId>lib-flatifier</artifactId>
-    <version>0.4.0-SNAPSHOT</version>
+    <version>0.4.0</version>
 
     <packaging>jar</packaging>
 
