--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 
     <groupId>eu.smesec.cysec</groupId>
     <artifactId>flatifier-aggregator</artifactId>
-    <version>0.4.0-SNAPSHOT</version>
+    <version>0.4.0</version>
 
     <packaging>pom</packaging>
 
